--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <div id="projects">
 
             <div class="project">
-                <a href="project-2.html"
+                <a href="https://arunakamara.github.io/e-commerce/"
                     target="_blank">
-                    <img src="tribute_page.png"
-                        alt="tribute page">
+                    <img src="e-commerce.jpg"
+                        alt="e-commerce page">
                     <p class="project_text">
                         <span class="code">&lt;</span>
-                        Tribute page
+                        E-commerce Web Application
                         <span class="code">&#47;&gt;</span>
                     </p>
                 </a>
