--- a/index.html
+++ b/index.html
@@ -1,224 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-        href="style.css">
-    <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-        crossorigin="anonymous" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
     <title>Aruna Kamara</title>
-</head>
+  </head>
 
-
-<body>
-
+  <body>
     <div id="navbar">
-        <ul>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#about">About Me</a></li>
-        </ul>
+      <ul>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#about">About Me</a></li>
+      </ul>
     </div>
 
-<!--
+    <!--
 ------------------------------------
     ***** About Section ******
 ------------------------------------
 -->
 
     <section id="about">
-        <div id="container">
+      <div id="container">
+        <div id="profile">
+          <!--profile picture-->
+          <figure id="img">
+            <img
+              id="pp"
+              src="my_portfolio_pp.jpg"
+              alt="profile_picture"
+              style="width: 250px; height: 250px"
+            />
+            <figcaption>Aruna Kamara</figcaption>
+          </figure>
 
-            <div id="profile">
-
-                <!--profile picture-->
-                <figure id="img">
-                    <img id="pp"
-                        src="my_portfolio_pp.jpg"
-                        alt="profile_picture"
-                        style="width:250px;height:250px">
-                    <figcaption>Aruna Kamara</figcaption>
-                </figure>
-
-                <!--professional details-->
-                <div id="course">
-                    <p>B.Tech student in Computer Science and 
-                        Engineering</p>
-                    <a href="https://giet.ac.in/" target="_blank">Godavari Institute
-                         of Engineering and Technology</a> <br />
-                         Andhra Pradesh, India.
-                </div>
-            </div>
-
-            <!--More Details-->
-            <div id="right">
-                <div id="about_me">
-                    <h1>About Me</h1>
-                    <p>I am a 3<sup>rd</sup> year B.Tech student in 
-                        the Department of Computer Science and Engineering
-                        at <a href="https://giet.ac.in/" target="_blank"> GIET</a> studying
-                         as an international student and a <a
-                            href="https://www.studyinindia.gov.in/" target="_blank">Study 
-                            in India (SII) </a>scholar.</p>
-                    <p>I am a certified front-end developer who is equipped 
-                        with all the necessary skills to work in any
-                        web development industry. I can also handle the 
-                        back-end developer using frameworks Express,
-                        Angular and Django.</p>
-                </div>
-
-                <!--My Interests-->
-                <div id="interest">
-                    <h2>Interests</h2>
-                    <ul>
-                        <li><i class="fas fa-book-open"></i> Cloud Computing</li>
-                        <li><i class="fas fa-book-open"></i> Containers</li>
-                        <li><i class="fas fa-book-open"></i> Kubernetes</li>
-                        <li><i class="fas fa-book-open"></i> Dockers</li>
-                    </ul>
-                </div>
-
-                <div id="education">
-                    <h2>Education</h2>
-                    <div style="display: flex">
-                        <i class="fas fa-graduation-cap"></i>
-                        <ul>
-                            <li>B.Tech in Computer Science and Engineering, Present</li>
-                            <li>
-                                Godavari Institute of Engineering and Technology (GIET)
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
-
+          <!--professional details-->
+          <div id="course">
+            <p>B.Tech student in Computer Science and Engineering</p>
+            <a href="https://giet.ac.in/" target="_blank"
+              >Godavari Institute of Engineering and Technology</a
+            >
+            <br />
+            Andhra Pradesh, India.
+          </div>
         </div>
+
+        <!--More Details-->
+        <div id="right">
+          <div id="about_me">
+            <h1>About Me</h1>
+            <p>
+              I am a 3<sup>rd</sup> year B.Tech student in the Department of
+              Computer Science and Engineering at
+              <a href="https://giet.ac.in/" target="_blank"> GIET</a> studying
+              as an international student and a
+              <a href="https://www.studyinindia.gov.in/" target="_blank"
+                >Study in India (SII) </a
+              >scholar.
+            </p>
+            <p>
+              I am a certified front-end developer who is equipped with all the
+              necessary skills to work in any web development industry. I can
+              also handle the back-end developer using frameworks Express,
+              Angular and Django.
+            </p>
+          </div>
+
+          <!--My Interests-->
+          <div id="interest">
+            <h2>Interests</h2>
+            <ul>
+              <li><i class="fas fa-book-open"></i> Cloud Computing</li>
+              <li><i class="fas fa-book-open"></i> Containers</li>
+              <li><i class="fas fa-book-open"></i> Kubernetes</li>
+              <li><i class="fas fa-book-open"></i> Dockers</li>
+            </ul>
+          </div>
+
+          <div id="education">
+            <h2>Education</h2>
+            <div style="display: flex">
+              <i class="fas fa-graduation-cap"></i>
+              <ul>
+                <li>B.Tech in Computer Science and Engineering, Present</li>
+                <li>Godavari Institute of Engineering and Technology (GIET)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-<!--
+    <!--
 ------------------------------------
     ***** End of About Section *****
 ------------------------------------
 -->
 
-
-<!--
+    <!--
 ------------------------------------
     ***** Work Section *****
 ------------------------------------
 -->
     <section id="work">
-        <h2 id="project_header">These are some of my projects</h2>
-        
+      <h2 id="project_header">These are some of my projects</h2>
 
-        <div id="projects">
+      <div id="projects">
+        <div class="project">
+          <a href="https://arunakamara.github.io/e-commerce/" target="_blank">
+            <img src="e-commerce.jpg" alt="e-commerce page" />
+            <p class="project_text">
+              <span class="code">&lt;</span>
+              E-commerce Web Application
+              <span class="code">&#47;&gt;</span>
+            </p>
+          </a>
+        </div>
 
-            <div class="project">
-                <a href="https://arunakamara.github.io/e-commerce/"
-                    target="_blank">
-                    <img src="e-commerce.jpg"
-                        alt="e-commerce page">
-                    <p class="project_text">
-                        <span class="code">&lt;</span>
-                        E-commerce Web Application
-                        <span class="code">&#47;&gt;</span>
-                    </p>
-                </a>
-            </div>
+        <div class="project">
+          <a href="project-1.htm" target="_blank">
+            <img src="survey_form.png" alt="survery form" />
+            <p class="project_text">
+              <span class="code">&lt;</span>
+              Survey Form
+              <span class="code">&#47;&gt;</span>
+            </p>
+          </a>
+        </div>
 
-            <div class="project">
-                <a href="project-1.htm"
-                    target="_blank">
-                    <img src="survey_form.png"
-                        alt="survery form">
-                    <p class="project_text">
-                        <span class="code">&lt;</span>
-                        Survey Form
-                        <span class="code">&#47;&gt;</span>
-                    </p>
-                </a>
-            </div>
+        <div class="project">
+          <a href="project-4.html" target="_blank">
+            <img src="product_landing.png" alt="product landing page" />
+            <p class="project_text">
+              <span class="code">&lt;</span>
+              Product Landing page
+              <span class="code">&#47;&gt;</span>
+            </p>
+          </a>
+        </div>
+      </div>
 
-            <div class="project">
-                <a href="project-4.html"
-                    target="_blank">
-                    <img src="product_landing.png"
-                        alt="product landing page">
-                    <p class="project_text">
-                        <span class="code">&lt;</span>
-                        Product Landing page
-                        <span class="code">&#47;&gt;</span>
-                    </p>
-                </a>
-            </div>
-
-            </div>
-
-            <a href="#"
-                target="_blank"
-                class="btn">Show all <i class="fas fa-chevron-right"></i>
-            </a>
-
+      <a href="#" target="_blank" class="btn"
+        >Show all <i class="fas fa-chevron-right"></i>
+      </a>
     </section>
 
-<!--
+    <!--
 ------------------------------------------
     *****End of Work Section*****
 ------------------------------------------
 -->
 
-
-
-<!--
+    <!--
 ------------------------------------------
     *****Contact Section*****
 ------------------------------------------
 -->
     <section id="contact">
-        <h1 id="contact_header">Let's work together...</h1>
+      <h1 id="contact_header">Let's work together...</h1>
 
-        <div id="contacts_container">
-            <!--Add facebook link here--> <a href="#facebook"
-                target="_blank"
-                class="contact"><i class="fab fa-facebook-square"></i> Facebook</a>
+      <div id="contacts_container">
+        <!--Add facebook link here-->
+        <a href="#facebook" target="_blank" class="contact"
+          ><i class="fab fa-facebook-square"></i> Facebook</a
+        >
 
-            <a href="#github"
-                target="_blank"
-                class="contact"><i class="fab fa-github"></i> Github</a>
+        <a href="#github" target="_blank" class="contact"
+          ><i class="fab fa-github"></i> Github</a
+        >
 
-            <a href="#twitter"
-                target="_blank"
-                class="contact"><i class="fab fa-twitter"></i> Twitter</a>
+        <a href="#twitter" target="_blank" class="contact"
+          ><i class="fab fa-twitter"></i> Twitter</a
+        >
 
-            <a href="#email"
-                target="_blank"
-                class="contact"><i class="fas fa-at"></i> Send a mail</a>
+        <a href="#email" target="_blank" class="contact"
+          ><i class="fas fa-at"></i> Send a mail</a
+        >
 
-            <a href="#call"
-                target="_blank"
-                class="contact"><i class="fas fa-mobile-alt"></i> Call me</a>
-
-        </div>
-
+        <a href="#call" target="_blank" class="contact"
+          ><i class="fas fa-mobile-alt"></i> Call me</a
+        >
+      </div>
     </section>
 
-    <hr>
+    <hr />
 
     <footer>
-        <address>
-            Done by:
-            Aruna Kamara
-        </address>
-        &copybrain2024
+      <address>Done by: Aruna Kamara</address>
+      &copybrain2024
     </footer>
-
-</body>
-
+  </body>
 </html>
