--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <figure id="img">
             <img
               id="pp"
-              src="my_portfolio_pp.jpg"
+              src="portfolio_pp.png"
               alt="profile_picture"
               style="width: 250px; height: 250px"
             />
