added slsu_ap project

--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
             <img src="e-commerce.jpg" alt="e-commerce page" />
             <p class="project_text">
               <span class="code">&lt;</span>
-              E-commerce Web Application
+              E-commerce Web App
               <span class="code">&#47;&gt;</span>
             </p>
           </a>
         </div>
 
         <div class="project">
-          <a href="project-1.htm" target="_blank">
-            <img src="survey_form.png" alt="survery form" />
+          <a href="https://slsu-ap-client.onrender.com" target="_blank">
+            <img src="slsu_ap.jpg" alt="slsu_ap home page" />
             <p class="project_text">
               <span class="code">&lt;</span>
-              Survey Form
+              SLSU - AP Website
               <span class="code">&#47;&gt;</span>
             </p>
           </a>
@@ -142,7 +142,7 @@
 
         <div class="project">
           <a href="project-4.html" target="_blank">
-            <img src="product_landing.png" alt="product landing page" />
+            <img src="survey_form.png" alt="survey_form page" />
             <p class="project_text">
               <span class="code">&lt;</span>
               Product Landing page
