--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div style="display: flex">
               <i class="fas fa-graduation-cap"></i>
               <ul>
-                <li>B.Tech in Computer Science and Engineering, Present</li>
+                <li>B.Tech in Computer Science and Engineering, Present</li><br/>
                 <li>Godavari Institute of Engineering and Technology (GIET)</li>
               </ul>
             </div>
