Added github link

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           ><i class="fab fa-facebook-square"></i> Facebook</a
         >
 
-        <a href="#github" target="_blank" class="contact"
+        <a href="https://github.com/arunakamara" target="_blank" class="contact"
           ><i class="fab fa-github"></i> Github</a
         >
 
