--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           ><i class="fas fa-at"></i> Send a mail</a
         >
 
-        <a href="#call" target="_blank" class="contact"
+        <a href="tel:+916304723359" target="_blank" class="contact"
           ><i class="fas fa-mobile-alt"></i> Call me</a
         >
       </div>
