--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div id="about_me">
             <h1>About Me</h1>
             <p>
-              I am a 3<sup>rd</sup> year B.Tech student in the Department of
+              I am a final year B.Tech student in the Department of
               Computer Science and Engineering at
               <a href="https://giet.ac.in/" target="_blank"> GIET</a> studying
               as an international student and a
@@ -173,8 +173,8 @@
 
       <div id="contacts_container">
         <!--Add facebook link here-->
-        <a href="#facebook" target="_blank" class="contact"
-          ><i class="fab fa-facebook-square"></i> Facebook</a
+        <a href="https://www.linkedin.com/in/aruna-kamara-145507205/" target="_blank" class="contact"
+          ><i class="fab fa-linkedin"></i> LinkedIn</a
         >
 
         <a href="https://github.com/arunakamara" target="_blank" class="contact"
@@ -185,11 +185,11 @@
           ><i class="fab fa-twitter"></i> Twitter</a
         >
 
-        <a href="#email" target="_blank" class="contact"
+        <a href="mailto:kamaraaruna198@gmail.com" class="contact"
           ><i class="fas fa-at"></i> Send a mail</a
         >
 
-        <a href="tel:+916304723359" target="_blank" class="contact"
+        <a href="tel:+916304723359" class="contact"
           ><i class="fas fa-mobile-alt"></i> Call me</a
         >
       </div>
